# hermes-curriculum

./: .gitignore  AGENTS.md  Makefile  README.md  corpus.example.json  docker-compose.yml  pyproject.toml
.superpowers/sdd/: issue1-report.md  issue3-report.md
docs/: corpus-gpu-kernels.md  narration-contract.md
docs/superpowers/plans/: 2026-07-03-motivation-layer.md
schema/: 001_init.sql  002_motivation.sql
src/curriculum/: cli.py  config.py  providers_fake.py  providers_nous.py  providers_openai_compatible.py
src/curriculum/app/: __init__.py  build.py  build_logging.py  corpus_tools.py
src/curriculum/application/: composition.py  policies.py  service.py
src/curriculum/archetypes/: registry.py
src/curriculum/domain/: entities.py  enums.py  errors.py  events.py  telemetry.py
src/curriculum/engine/: fire.py  fsrs.py  scoring.py  selection.py  snapshot.py
src/curriculum/ingestion/: passes.py  pipeline.py
src/curriculum/linking/: __init__.py  embedding_linker.py
src/curriculum/mcp/: server.py
src/curriculum/okf/: frontmatter.py
tests/: test_archetypes.py  test_build.py  test_build_logging.py  test_cli.py  test_config.py  test_corpus_tools.py  test_fakes.py  test_fire.py  test_fsrs.py  test_ingestion.py  test_integration.py  test_linking.py  test_mcp.py  test_memory.py  test_motivation_service.py  test_okf.py  test_openai_compatible_provider.py  test_postgres.py  test_providers_openai_compatible.py  test_scoring.py  test_selection.py  test_snapshot.py  test_spine.py  test_sync.py  test_telemetry_domain.py  test_telemetry_store.py
(+8 files in other folders)
