[project]
name = "curriculum"
version = "0.1.0"
description = "Hermes curriculum layer: a knowledge-graph engine that decides what to teach/test next, so the tutor LLM never has to."
requires-python = ">=3.11"
dependencies = []  # core is stdlib-only and runs/tests without any install

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.2.5"]
mcp = ["mcp>=1.0"]
nous = ["httpx>=0.27"]

# The agent-facing entrypoint. curriculum.cli imports only the standard library
# at load time (heavy adapters are deferred into the command handlers), so the
# console script -- and `curriculum --help` / `curriculum doctor` -- work even
# when the postgres/mcp extras are not installed.
[project.scripts]
curriculum = "curriculum.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
